Going to power bi after MCA

--- a/Recruitment.ipynb
+++ b/Recruitment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -273,14 +273,14 @@
        "[2989 rows x 12 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Read the data\n",
-    "recruitmentDf = pd.read_csv('Recruitment_db.csv').drop(columns=['userid'])\n",
+    "recruitmentDf = pd.read_csv('Databases/Recruitment_db.csv').drop(columns=['userid'])\n",
     "# Convert dates\n",
     "recruitmentDf['date.entretien'] = pd.to_datetime(recruitmentDf['date.entretien'])\n",
     "recruitmentDf['date.signature'] = pd.to_datetime(recruitmentDf['date.signature'])\n",
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "Name: score.satisf.onb, dtype: float64"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -28712,7 +28712,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
